--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidFirebase</string>
+    <string name="app_name">My Finances</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="name">Name</string>
